--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	</head>
 
 	<body>
-		<h1>长按扫码二维码进群</h1>
-		<img src="code.jpg"> 
+		<center><h1>长按扫码二维码进群</h1><center/>
+		<center><img src="code.jpg"><center/>
 	
 
 
