--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
 	</head>
 
 	<body>
-		<center><h1>长按扫码二维码进群</h1><center/>
-		<center><img src="code.jpg"><center/>
-	
-
+		<center><h1>长按扫码二维码进群</h1></center>
+		<center><img src="code.jpg"></center>
 
 </body></html>
