--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 
 	<body>
 		<center><h1>长按扫码二维码进群</h1></center>
-		<center><img src="code.jpg"></center>
+		<center><img src="orcode.jpg"></center>
 
 </body></html>
