--- a/index.html
+++ b/index.html
@@ -7,5 +7,5 @@
 	<body>
 		<center><h1>长按扫码二维码进群</h1></center>
 		<center><img src="orcode.jpg"></center>
-		<a href=https://leanne-li-an.github.io/wechatcode/>了解更多</a>
+		<h1><center><a href=https://leanne-li-an.github.io/wechatcode/>了解更多</a></center></h1>
 </body></html>
