--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	</head>
 
 	<body>
-		<center><h1>长按扫码二维码进群</h1></center>
+		<center><h1>长按扫描二维码</h1></center>
 		<center><img src="orcode.jpg"></center>
 		<center><h1><a href=https://mp.weixin.qq.com/s/PbEVfIyAIR2wcc7FCmkvmQ>了解更多</a></h1></center>
 </body></html>
