--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<meta name="viewport" content="width=device-width">
 <!DOCTYPE html>
 <html>
 <head>
@@ -8,4 +9,14 @@
 		<center><h1>长按扫描二维码</h1></center>
 		<center><img src="orcode.jpg"></center>
 		<center><h1><a href=https://mp.weixin.qq.com/s/PbEVfIyAIR2wcc7FCmkvmQ>了解更多</a></h1></center>
-</body></html>
+        </body>
+	
+	<style>
+img {
+    max-width: 100%;
+}
+</style>
+
+
+
+</html>
