--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
 
 	<body>
 		<center><h1>长按扫描二维码</h1></center>
+                <center><h3>林煜先生本人微信</h3></center>
 		<center><img src="orcode.jpg"></center>
+
+		<center><h3>加入义工群</h3></center>
+		<center><img src="groupchat.jpg"></center>
+
 		<center><h1><a href=https://mp.weixin.qq.com/s/PbEVfIyAIR2wcc7FCmkvmQ>了解更多</a></h1></center>
+		
         </body>
 	
 	<style>
