--- a/index.html
+++ b/index.html
@@ -6,7 +6,16 @@
 	</head>
 
 	<body>
-		<center><h1>长按扫描二维码</h1></center>
+		<h1>最新消息</h1>
+		<p>加入 Zoom 会议
+https://us04web.zoom.us/j/9125754864?pwd=QkVzRzFnUTBDTTNUQUFBTjJQalBpdz09
+
+会议号：912 575 4864
+密码：gc0MG5
+		</p>
+		
+		
+		<center><h2>长按扫描二维码</h2></center>
                 <center><h3>林煜先生本人微信</h3></center>
 		<center><img src="orcode.jpg"></center>
 
