--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
 	</head>
 
 	<body>
-		<h1>最新消息</h1>
-		<p>加入 Zoom 会议
-https://us04web.zoom.us/j/9125754864?pwd=QkVzRzFnUTBDTTNUQUFBTjJQalBpdz09
-
+		<h2>最新消息</h2>
+		<p>zoom meeting
+		   Time: 10:00 P.M. 
+		   Date: 2/21/2021</p>
+		<center><p><a href="https://us04web.zoom.us/j/9125754864?pwd=QkVzRzFnUTBDTTNUQUFBTjJQalBpdz09">加入 Zoom 会议</a></p><c/center>
+		<center><p>
 会议号：912 575 4864
 密码：gc0MG5
-		</p>
+		</p></center>
 		
 		
 		<center><h2>长按扫描二维码</h2></center>
