--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 	</head>
 
 	<body>
-		<h2>最新消息</h2>
-		<p>zoom meeting
-		   Time: 10:00 P.M. 
-		   Date: 2/21/2021</p>
+		<center><h3>最新消息</h3><center>
+		<center><p>zoom meeting</p></center> 
+		 <center><p>Time: 10:00 P.M.</p></center> 
+		 <center><p>Date: 2/21/2021</p></center> 
 		<center><p><a href="https://us04web.zoom.us/j/9125754864?pwd=QkVzRzFnUTBDTTNUQUFBTjJQalBpdz09">加入 Zoom 会议</a></p><c/center>
 		<center><p>
 会议号：912 575 4864
