--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 	<body>
 		<center><h3>最新消息</h3><center>
-		<center><p>zoom meeting</p></center> 
+		<center><p>ZOOM meeting</p></center> 
 		 <center><p>Time: 10:00 P.M.</p></center> 
 		 <center><p>Date: 2/21/2021</p></center> 
 		<center><p><a href="https://us04web.zoom.us/j/9125754864?pwd=QkVzRzFnUTBDTTNUQUFBTjJQalBpdz09">加入 Zoom 会议</a></p><c/center>
