--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	</head>
 
 	<body>
-		<center><h3>最新消息</h3><center>
+		/*<center><h3>最新消息</h3><center>
 		<center><p>ZOOM meeting</p></center> 
 		 <center><p>Time: 10:00 P.M.</p></center> 
 		 <center><p>Date: 2/21/2021</p></center> 
@@ -16,7 +16,7 @@
 密码：gc0MG5
 		</p></center>
 		
-		
+		*/
 		<center><h2>长按扫描二维码</h2></center>
                 <center><h3>林煜先生本人微信</h3></center>
 		<center><img src="orcode.jpg"></center>
