--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
 		<center><h2>长按扫描二维码</h2></center>
                 <center><h3>林煜先生本人微信</h3></center>
 		<center><img src="orcode.jpg"></center>
-
+	
 		<center><h3>加入义工群</h3></center>
+		<!--
 		<center><img src="groupchat.jpg"></center>
-
+		-->
+		<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScrM-zwLlWobnjSHDKAg8tHCDmr4jP7DDWoVaEocF9t-KwTHA/viewform?embedded=true" width="640" height="820" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 		<center><h1><a href=https://mp.weixin.qq.com/s/PbEVfIyAIR2wcc7FCmkvmQ>了解更多</a></h1></center>
 		
         </body>
